force-app/main/default/objects/Rate_List_Header__c/Rate_List_Header__c.object-meta.xml
<CustomObject>
    <label>Rate List Header</label>
    <nameField>
        <label>Rate List Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate List Headers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>