force-app/main/default/objects/Rate_List_Header__c/fields/Effective_Till__c.field-meta.xml
<CustomField>
    <fullName>Effective_Till__c</fullName>
    <label>Effective Till</label>
    <type>Date</type>
</CustomField>