force-app/main/default/objects/Rate_List_Header__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Payment_Plan__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Rate List Headers</relationshipLabel>
    <relationshipName>Rate_List_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>