force-app/main/default/objects/Rate_List_Header__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Rate List Headers</relationshipLabel>
    <relationshipName>Rate_List_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>