force-app/main/default/objects/Rate_List_Header__c/fields/Project_Charges__c.field-meta.xml
<CustomField>
    <fullName>Project_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Charges</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Project_Charges__c.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>Project_Charges__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Charges__c</referenceTo>
    <relationshipLabel>Rate List Headers</relationshipLabel>
    <relationshipName>Rate_List_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>