force-app/main/default/objects/Rate_List_Header__c/fields/Rate_list__c.field-meta.xml
<CustomField>
    <fullName>Rate_list__c</fullName>
    <label>Rate list</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Charges</fullName>
            </value>
            <value>
                <fullName>Inaugural Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>