force-app/main/default/objects/Rate_List_Header__c/fields/Rate_List_Status__c.field-meta.xml
<CustomField>
    <fullName>Rate_List_Status__c</fullName>
    <label>Rate List Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UnProcessed</fullName>
                <default>true</default>
                <label>UnProcessed</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>