force-app/main/default/objects/Rate_List_Header__c/fields/Rate_List_Status_Reference__c.field-meta.xml
<CustomField>
    <fullName>Rate_List_Status_Reference__c</fullName>
    <formula>TEXT(Rate_List_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate List Status</label>
    <type>Text</type>
</CustomField>