force-app/main/default/objects/Rate_List_Header__c/fields/Unique_Project_Charge_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Unique_Project_Charge_Per_Day__c</fullName>
    <label>Unique Project Charge Per Day</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>