force-app/main/default/objects/Rate_List_Header__c/fields/UniqyePayplanRatelist__c.field-meta.xml
<CustomField>
    <fullName>UniqyePayplanRatelist__c</fullName>
    <label>UniqyePayplanRatelist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>