force-app/main/default/objects/Rate_List_Header__c/fields/Version_Date__c.field-meta.xml
<CustomField>
    <fullName>Version_Date__c</fullName>
    <label>Version Date</label>
    <type>Date</type>
</CustomField>