force-app/main/default/objects/Rate_List_Header__c/validationRules/All_Charges.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Charges</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISBLANK(Project_Charges__c)  ,  ISPICKVAL(Rate_list__c, &apos;All Charges&apos;)  )</errorConditionFormula>
    <errorDisplayField>Project_Charges__c</errorDisplayField>
    <errorMessage>You have to Choose Project Chages for All Charges</errorMessage>
</ValidationRule>