force-app/main/default/objects/Rate_List_Header__c/validationRules/Effective_Till_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Till_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Effective_Till__c  &lt; Effective_From__c</errorConditionFormula>
    <errorDisplayField>Effective_Till__c</errorDisplayField>
    <errorMessage>Effective Till Date Cannot Be Less Than Effective From Date</errorMessage>
</ValidationRule>