force-app/main/default/objects/Rate_List_Header__c/validationRules/Rate_List_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Rate_List_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Rate_list__c , &apos;Inaugural Discount&apos;),NOT( ISBLANK(Project_Charges__c) ))</errorConditionFormula>
    <errorDisplayField>Rate_list__c</errorDisplayField>
    <errorMessage>You Can not Choose Project Charges for Inaugural Discount</errorMessage>
</ValidationRule>